@@ -110,6 +110,18 @@ typedef void* voidpointer;
 /* Hacks for TeX that are better not to #ifdef, see lib/openclose.c.  */
 extern int tfmtemp, texinputtype;
 
+/* pdfTeX routines also used for e-pTeX and e-upTeX */
+#if defined (pdfTeX) || defined (epTeX) || defined (eupTeX)
+extern char start_time_str[];
+extern void pdftex_fail(const char *fmt, ...);
+extern void initstarttime(void);
+extern char *makecstring(integer s);
+extern char *makecfilename(integer s);
+extern void getcreationdate(void);
+extern void getfilemoddate(integer s);
+extern void getfilesize(integer s);
+#endif
+
 /* pdftex etc. except for tex use these for pipe support */
 #if defined(TeX) && !defined(onlyTeX)
 extern boolean open_in_or_pipe (FILE **, int, const_string fopen_mode);
