@@ -1,3 +1,11 @@
+2013-06-11  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	Update to e-pTeX and e-upTeX 130605 from Hironori Kitagawa.
+	* texmfmp.c (pdftex_fail): Adapted from ../pdftexdir/utils.c.
+	(initstarttime, makecstring, makecfilename, getcreationdate,
+	getfilemoddate, getfilesize): Move definition of these functions
+	also used by e-(u)pTeX from ../pdftexdir/utils.c to here.
+
 2013-04-09  Akira Kakuto  <kakuto@fuk.kinidai.ac.jp>
 
 	* printversion.c: 2012 ---> 2013.
